# cross-capture

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/crosscapture/: capture_device.h  crosscapture.h  helpers.h  window.h
include/crosscapture/capture_device/: device.h  dgi_device.h  dxgi_device.h
include/crosscapture/common/: CaptureDevice.h  CapturedFrame.h  Display.h
include/crosscapture/common/capture_device/: device.h
include/crosscapture/common/view/: monitor_view.h  view.h  window_view.h
include/crosscapture/platform/: platform.h
include/crosscapture/platform/osx/: quartz_device.h
include/crosscapture/platform/win/: dgi_device.h  dxgi_device.h  gdi_device.h
include/crosscapture/view/: monitor_view.h  view.h  window_view.h
lib/capture_device/: device.cpp  dgi_device.cpp  dxgi_device.cpp
lib/common/capture_device/: device.cpp
lib/common/view/: monitor_view.cpp  view.cpp  window_view.cpp
lib/platform/: windows.cpp
lib/platform/osx/: osx.cpp  quartz_device.cpp
lib/platform/win/: dgi_device.cpp  dxgi_device.cpp  gdi_device.cpp  windows.cpp
lib/view/: monitor_view.cpp  view.cpp  window_view.cpp
src/: main.cpp
